# civitas-data-eng

./: .env.example  .gitignore  Dockerfile  Makefile  PRE_REQUISITOS.md  PROXIMOS_PASSOS.md  QUICKSTART.md  README.md  SETUP.md  TECHNICAL_DECISIONS.md  csv_exemplo_brt_gps.csv  docker-compose.yml  pyproject.toml  register_flows.py  requirements.txt  run.ps1  setup.py  test_brt_api.py  test_flow_complete.py  validate_environment.py
config/: .gitkeep
credentials/: README.md  civitas-data-eng-8feab1c31a9a.json
data/: .gitkeep
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: .gitkeep  test_valid_rio_coordinates.sql
dbt/models/bronze/: brt_gps_external.sql  schema.yml  sources.yml
dbt/models/gold/: agg_metricas_horarias.sql  dim_brt_linhas.sql  dim_brt_veiculos.sql  fct_brt_viagens.sql  schema.yml
dbt/models/silver/: schema.yml  stg_brt_gps.sql
docker/: Dockerfile  README.md  docker-compose.yml
pipelines/: __init__.py  constants.py  flows.py
pipelines/brt/: __init__.py
pipelines/brt/extract_load/: __init__.py  flows.py  schedules.py  tasks.py
pipelines/utils/: __init__.py  datetime_utils.py  gcp.py  logging_utils.py
queries/: dbt_project.yml  profiles.yml.example
queries/models/: .gitkeep
queries/seeds/: .gitkeep
scripts/: README.md  test_gcs_upload.py
