[tool.poetry]
name = "civitas-data-eng"
version = "0.1.0"
description = "Pipeline de ELT para captura de dados GPS do BRT"
authors = ["Felipe Santoro <flpsantoro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
prefect = "1.4.1"
python-dotenv = "^1.0.0"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery = "^3.11.4"
db-dtypes = "^1.1.1"
pandas = "^2.0.3"
requests = "^2.31.0"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.0"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
